# Nomad

./: .gitignore  README.md  docker-compose.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: client.ts
apps/desktop/src/components/chat/: ChatArea.tsx
apps/desktop/src/components/layout/: ChannelList.tsx  ServerList.tsx
apps/desktop/src/pages/: App.tsx  Login.tsx
apps/desktop/src/store/: app.ts  auth.ts
docs/: ROADMAP.md
server/: .env.example  go.mod  go.sum
server/cmd/api/: main.go
server/config/: config.go
server/db/migrations/: 001_init.sql
server/internal/auth/: handler.go  middleware.go
server/internal/channel/: handler.go
server/internal/db/: db.go
server/internal/message/: handler.go
server/internal/server/: handler.go
server/internal/ws/: handler.go  hub.go
