[package]
name = "nomad"
version = "0.1.0"
description = "Nomad - Decentralized chat for gamers"
authors = ["N0mad-gg"]
edition = "2021"

[lib]
name = "nomad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
